@@ -1,3 +1,4 @@
+	* add_torrent_params file_priorities is not affected by flag_override_resume_data
 	* fix ABI compatibility issue introduced with preformatted entry type
 
 1.0.11 release
